# wazo-webhookd

./: .gitignore  .pre-commit-config.yaml  .zuul.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  constraint-stretch.txt  constraint-tarballs.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  zuul.yaml
.github/workflows/: pr-notion-sync.yml
alembic/: env.py
alembic/versions/: 1495b7c1224_create_subscription_tables.py  231d4dbd38_add_owner_user_uuid_field.py  35b30e165f6_add_subscriptions_metadata_table.py  3eb8e3fa4537_squashed_baseline_wazo_25_14.py  3eb8e3fa4537_updated_subscriptions_with_user_missed_.py  4a3e41acfb_add_events_user_uuid_field.py  57e36bf4269_add_events_wazo_uuid_field.py  911ad0861ef5_add_indices_for_foreign_keys.py  911ad0861ef5_squashed_baseline_wazo_23_05.py  baseline-2514.sql  cab8bbbdcfae_add_hook_log_table.py  cab8bbbdcfae_add_sub_logs_table.py  df313e703ee8_remove_unecessary_sequence.py  f573303305e5_add_cancel_dial_mobile_to_current_.py  f63e43dcf0ca_add_tenant_to_subscription.py
contribs/docker/: Dockerfile-db  init-webhookd-db.sh
debian/: changelog  control  copyright  rules  wazo-webhookd.dirs  wazo-webhookd.install  wazo-webhookd.links  wazo-webhookd.logrotate  wazo-webhookd.postinst  wazo-webhookd.service
etc/rsyslog.d/: 99-wazo-webhookd.conf
etc/wazo-webhookd/: config.yml
integration_tests/: Dockerfile  Makefile  setup.py  test-requirements-for-tox.txt  test-requirements.txt
integration_tests/assets/: docker-compose.base.override.yml  docker-compose.documentation.override.yml  docker-compose.proxy.override.yml  docker-compose.yml
integration_tests/plugins/sentinel/: setup.cfg  setup.py
integration_tests/plugins/sentinel/wazo_webhookd_sentinel/: plugin.py
integration_tests/suite/: __init__.py  test_bus.py  test_celery.py  test_config.py  test_database.py  test_documentation.py  test_http_callback.py  test_http_interface.py  test_mobile_callback.py  test_mobile_notifications.py  test_services.py  (+5 more)
tools/: test-setup.sh
wazo_webhookd/: asyncio_.py  auth.py  bus.py  celery.py  config.py  conftest.py  controller.py  exceptions.py  rest_api.py  types.py
zuul.d/: pre.yaml
(+135 files in other folders)
