[metadata]
name = wazo-webhookd
version = 1.0
author = Wazo Authors
author_email = dev@wazo.community
home-page = http://wazo.community
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages =
    wazo_webhookd

include_package_data = true

install_requires =
    alembic
    celery
    cheroot
    flask-cors
    flask-restful
    flask
    jinja2
    kombu
    setproctitle
    marshmallow
    netifaces
    psycopg2
    python-consul
    pyyaml
    sqlalchemy
    sqlalchemy_utils
    stevedore
    wazo-auth-client
    xivo
    xivo_lib_rest_client

[options.extras_require]
test =
    mock
    pytest
    pytest-cov
    pyhamcrest

integration =
    docker-compose
    openapi-spec-validator
    requests
    wazo-webhookd-client
    xivo-test-helpers
    mockserver-client-python

[options.entry_points]
console_scripts =
    wazo-webhookd = wazo_webhookd.bin.daemon:main
    wazo-webhookd-init-db = wazo_webhookd.bin.init_db:main

wazo_webhookd.plugins =
    api = wazo_webhookd.plugins.api.plugin:Plugin
    config = wazo_webhookd.plugins.config.plugin:Plugin
    status = wazo_webhookd.plugins.status.plugin:Plugin
    subscriptions = wazo_webhookd.plugins.subscription.plugin:Plugin
    services = wazo_webhookd.plugins.services.plugin:Plugin
    tenant_migration = wazo_webhookd.plugins.tenant_migration.plugin:Plugin

wazo_webhookd.services =
    http = wazo_webhookd.services.http.plugin:Service

[nosetests]
exclude=integration_tests

[build_wheel]
universal = 1
