[metadata]
name = wazo-webhookd-plugin-sentinel
version = 1.0
author = Wazo Authors
author_email = dev@wazo.community
home-page = http://wazo.community

[options]
packages =
    wazo_webhookd_sentinel

wazo_webhookd.plugins =
    sentinel = wazo_webhookd_sentinel.plugin:Plugin

[build_wheel]
universal = 1
